Alignment, spacing and responsive issues fixed for Eng and Arabic

--- a/scss/pages/_industries.scss
+++ b/scss/pages/_industries.scss
@@ -1,5 +1,8 @@
 .our__solutions {
     padding: 40px 0px 120px;
+    @media (max-width: 992px) {
+        padding: 40px 0px 0;
+    }
     .content {
         margin-bottom: 80px;
     }
